services/arch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch
  namespace: arch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch
  template:
    metadata:
      labels:
        app: arch
    spec:
      containers:
      - name: arch
        image: ghcr.io/vimalmenon/micro-army/arch
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
