services/arch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch
  namespace: arch
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: arch
