services/arch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch
  namespace: arch
spec:
  ingressClassName: traefik
  rules:
  - host: arch.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: arch
            port:
              number: 80
        path: /
        pathType: Prefix
